--- a/index.css
+++ b/index.css
@@ -20,7 +20,7 @@ a.red {
 }
 
 .banner{
-    background-color: #130066;
+    background-color: #ffffff;
     color: white;
     margin-top: 50px;
     text-align: center;
