--- a/index.css
+++ b/index.css
@@ -22,6 +22,9 @@ a.red {
 .banner{
     background-color: #ffffff;
     color: #990000;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif,fantasy;
+    font-weight: bold;
+    font-size: 100px;
     margin-top: 50px;
     text-align: center;
     padding: 100px 0;
