--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-.navbar{
+/* .navbar{
     background-color: gray;
     position: fixed;
     top: 0;
@@ -28,4 +28,4 @@ a.red {
     margin-top: 50px;
     text-align: center;
     padding: 100px 0;
-}
+} */
