--- a/Client/resources/css/index.css
+++ b/Client/resources/css/index.css
@@ -35,7 +35,7 @@ a.red {
     border: 1px solid #ddd;
     border-radius: 4px;
     padding: 5px;
-    width: 250px;
+    width: 30%;
 }
 
 #shoppingcartimage{
@@ -51,9 +51,9 @@ a.red {
 .shoppinglist {
     float: right;
     width: 25%;
-    border-radius: 4px;
     background-color: grey;
     text-align: center;
+    padding: 15px;
 }
 
 .menubulletpoints {
