--- a/Client/resources/css/index.css
+++ b/Client/resources/css/index.css
@@ -35,7 +35,7 @@ a.red {
     border: 1px solid #ddd;
     border-radius: 4px;
     padding: 5px;
-    width: 30%;
+    width: 25%;
 }
 
 #shoppingcartimage{
@@ -50,13 +50,15 @@ a.red {
 
 .shoppinglist {
     float: right;
-    width: 25%;
+    width: 30%;
     background-color: grey;
     text-align: center;
-    padding: 15px;
+    padding: 10px;
 }
+
 
 .menubulletpoints {
     list-style-type: circle;
     float: left;
+    text-align: left;
 }
