--- a/Client/resources/css/login.css
+++ b/Client/resources/css/login.css
@@ -86,3 +86,93 @@ form {
     text-decoration: none;
     color: black;
 }
+
+body {
+  height: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  background-color: #ffffff;
+}
+
+#main-holder {
+  width: 50%;
+  height: 70%;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  background-color: white;
+  border-radius: 7px;
+  box-shadow: 0px 0px 5px 2px white;
+}
+
+#login-error-msg-holder {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+}
+
+#login-error-msg {
+  width: 23%;
+  text-align: center;
+  margin: 0;
+  padding: 5px;
+  font-size: 12px;
+  font-weight: bold;
+  color: #990000;
+  border: 1px solid #990000;
+  background-color:gray;
+  opacity: 0;
+}
+
+#error-msg-second-line {
+  display: block;
+}
+
+#login-form {
+  align-self: flex-start;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  width: 50%;
+}
+
+.login-form-field::placeholder {
+  color: gray;
+}
+
+.login-form-field {
+  border: none;
+  border-bottom: 1px solid black;
+  margin-bottom: 10px;
+  border-radius: 3px;
+  outline: none;
+  padding: 0px 0px 5px 5px;
+}
+
+#login-form-submit {
+  width: 100%;
+  padding: 7px;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+  background-color: #3a3a3a;
+  cursor: pointer;
+  outline: none;
+}
+
+#loginbutton{
+  background-color: #660000;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: black;
+  cursor: pointer;
+  width: 100%;
+  text-align: center;
+}
