--- a/Client/resources/css/login.css
+++ b/Client/resources/css/login.css
@@ -52,23 +52,6 @@ form {
   .container {
     padding: 16px;
   }
-  
-  /* The "Forgot password" text */
-  span.psw {
-    float: right;
-    padding-top: 16px;
-  }
-  
-  /* Change styles for span and cancel button on extra small screens */
-  @media screen and (max-width: 300px) {
-    span.psw {
-      display: block;
-      float: none;
-    }
-    .cancelbtn {
-      width: 100%;
-    }
-  }
 
   .navbar{
     background-color: gray;
@@ -94,7 +77,7 @@ body {
   display: grid;
   justify-items: center;
   align-items: center;
-  background-color: #ffffff;
+  background-color: white;
 }
 
 #main-holder {
@@ -105,7 +88,6 @@ body {
   align-items: center;
   background-color: white;
   border-radius: 7px;
-  box-shadow: 0px 0px 5px 2px white;
 }
 
 #login-error-msg-holder {
@@ -117,7 +99,7 @@ body {
 }
 
 #login-error-msg {
-  width: 23%;
+  width: 25%;
   text-align: center;
   margin: 0;
   padding: 5px;
@@ -162,7 +144,6 @@ body {
   color: white;
   font-weight: bold;
   background-color: #3a3a3a;
-  cursor: pointer;
   outline: none;
 }
 
@@ -172,7 +153,6 @@ body {
   padding: 14px 20px;
   margin: 8px 0;
   border: black;
-  cursor: pointer;
   width: 100%;
   text-align: center;
 }
