--- a/Client/resources/css/ManagerDashboard.css
+++ b/Client/resources/css/ManagerDashboard.css
@@ -1,6 +1,23 @@
-.upcoming{
+.navbar{
     background-color: gray;
+    position: fixed;
     top: 0;
     width: 100%;
+  }
+  
+  .navbar li{
+    display: inline;
+    padding:20px;
+  }
+
+.upcoming{
+    background-color: white;
+    top: 0;
+    width: auto;
+    height: auto;
     padding: 16px;
+}
+
+html{
+    background-color: white;
 }
