--- a/Client/resources/css/login.css
+++ b/Client/resources/css/login.css
@@ -1,3 +1,15 @@
+.navbar{
+  background-color: gray;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.navbar li{
+  display: inline;
+  padding:20px;
+}
+
 /* Bordered form */
 form {
     border: 3px solid #f1f1f1;
@@ -51,6 +63,13 @@ form {
   /* Add padding to containers */
   .container {
     padding: 16px;
+  }
+
+  #login-header{
+      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif, fantasy;
+      font-weight: bold;
+      font-size: 40px;
+      color: #990000;
   }
 
   .navbar{
@@ -147,7 +166,7 @@ body {
   outline: none;
 }
 
-#loginbutton{
+#login-form-submit{
   background-color: #660000;
   color: white;
   padding: 14px 20px;
