--- a/Client/resources/css/ManagerDashboard.css
+++ b/Client/resources/css/ManagerDashboard.css
@@ -21,3 +21,24 @@
 html{
     background-color: white;
 }
+
+.navbar{
+    background-color: gray;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.navbar li{
+    display: inline;
+    padding:20px;
+}
+
+.navbar a {
+    text-decoration: none;
+    color: black;
+}
+
+a.red {
+    color: #990000;
+}
