--- a/Client/resources/css/Receipt.css
+++ b/Client/resources/css/Receipt.css
@@ -31,11 +31,11 @@ table td {
     BODY & CONTAINER
 ------------------------------------- */
 body {
-    background-color: #f6f6f6;
+    background-color: white;
 }
 
 .body-wrap {
-    background-color: #f6f6f6;
+    background-color: white;
     width: 100%;
 }
 
@@ -58,7 +58,7 @@ body {
     HEADER, FOOTER, MAIN
 ------------------------------------- */
 .main {
-    background: #fff;
+    background:white;
     border: 1px solid #e9e9e9;
     border-radius: 3px;
 }
@@ -261,4 +261,117 @@ a {
     .invoice {
         width: 100% !important;
     }
+}
+
+button,
+input[type="submit"] {
+  background: #660000;
+  border: none;
+  border-bottom: 3px solid #660000;
+  color: #fff;
+  display: inline-block;
+  padding: 8px;
+  vertical-align: bottom;
+  width: 50%;
+}
+
+.creditCardForm {
+    max-width: 700px;
+    background-color: #f6f6f6;
+    color: #f6f6f6;
+    margin: 100px auto;
+    overflow: hidden;
+    padding: 25px;
+    color: #4c4e56;
+}
+.creditCardForm label {
+    width: 100%;
+    margin-bottom: 10px;
+}
+.creditCardForm .heading h1 {
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+    color: #4c4e56;
+}
+.creditCardForm .payment {
+    float: left;
+    font-size: 18px;
+    padding: 10px 25px;
+    margin-top: 20px;
+    position: relative;
+}
+.creditCardForm .payment .form-group {
+    float: left;
+    margin-bottom: 15px;
+}
+.creditCardForm .payment .form-control {
+    line-height: 40px;
+    height: auto;
+    padding: 0 16px;
+}
+.creditCardForm .owner {
+    width: 63%;
+    margin-right: 10px;
+}
+.creditCardForm .CVV {
+    width: 35%;
+}
+.creditCardForm #card-number-field {
+    width: 100%;
+}
+.creditCardForm #expiration-date {
+    width: 49%;
+}
+.creditCardForm #credit_cards {
+    width: 50%;
+    margin-top: 25px;
+    text-align: right;
+}
+.creditCardForm #pay-now {
+    width: 100%;
+    margin-top: 25px;
+}
+.creditCardForm .payment .btn {
+    width: 100%;
+    margin-top: 3px;
+    font-size: 24px;
+    background-color: #660000;
+    color: white;
+}
+.creditCardForm .payment select {
+    padding: 10px;
+    margin-right: 15px;
+}
+.transparent {
+    opacity: 0.2;
+}
+@media(max-width: 650px) {
+    .creditCardForm .owner,
+    .creditCardForm .CVV,
+    .creditCardForm #expiration-date,
+    .creditCardForm #credit_cards {
+        width: 100%;
+    }
+    .creditCardForm #credit_cards {
+        text-align: left;
+    }
+}
+
+html{
+    background-color: white;
+}
+
+#visa{
+    height: 30px;
+    width: 60px;
+}
+
+#mastercard{
+    height: 80px;
+    width: 80px;
+}
+
+#amex{
+    height: 35px;
+    width: 35px;
 }
