--- a/Client/resources/css/Calendar.css
+++ b/Client/resources/css/Calendar.css
@@ -1,5 +1,10 @@
-ul {list-style-type: none;}
-body {font-family: Verdana, sans-serif;}
+ul {
+  list-style-type: none;
+}
+
+body {
+  font-family: Verdana, sans-serif;
+}
 
 /* Month header */
 .month {
